# scratchpad

./: .gitmodules  LICENSE  README.md  jlab-environment.yml  pyproject.toml
BGS-MMA-2E/: MMA_SHA_2E.ipynb  mjd2000.py
OMNI-and-RTSW/: access-f107.ipynb  access-omni-and-rtsw.ipynb
Swarm-ULF/: open_data.ipynb  vires_implementation_ULF.ipynb
