[project]
name = "scratchpad"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "apexpy>=2.1.0",
    "chaosmagpy>=0.13.1",
    "h5py>=3.13.0",
    "hapiclient>=0.2.6",
    "hdf5storage",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.5",
    "markdown>=3.7",
    "matplotlib>=3.10.1",
    "openpyxl>=3.1.5",
    "pooch>=1.8.2",
    "pycdfpp>=0.7.6",
    "pyproj>=3.7.1",
    "pyshtools>=4.13.1",
    "spacepy>=0.7.0",
    "statsmodels>=0.14.4",
    "sunpy>=6.1.1",
    "swarmpal>=0.1.0",
    "tabulate>=0.9.0",
    "viresclient>=0.12.3",
]

[tool.uv.sources]
swarmpal = { path = "../SwarmPAL", editable = true }
viresclient = { path = "../VirES-Python-Client", editable = true }
hdf5storage = { git = "https://github.com/frejanordsiek/hdf5storage" }
